--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   <script src="./tv-video-player-plugin.min.js"></script>
   <script>
     window.onload = function () {
-      // http://10.27.173.18:8081/vod/minhang/minhangjiaoyujuxinxihua/index.m3u8
-      new VideoPlayerPlugin(100,100,480,320,false,"http://10.27.173.18:8081/vod/minhang/minhangjiaoyujuxinxihua/index.m3u8");
+      new VideoPlayerPlugin(100,100,480,320,false,"http://.../index.m3u8");
     }
   </script>
 </body>
